deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  labels:
    app: php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: avtandilko/php-demo:0.0.6
        ports:
        - containerPort: 9000
          name: php
        readinessProbe:
          tcpSocket:
            port: php
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 200m
      - name: nginx
        image: bitnami/nginx:latest
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 1
        volumeMounts:
        - name: nginx-server-blocks
          mountPath: /opt/bitnami/nginx/conf/server_blocks
      volumes:
      - name: nginx-server-blocks
        configMap:
          name: nginx-configmap
