deployment/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  labels:
    app: php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: example
        image: avtandilko/php-demo:0.0.3
        ports:
        - containerPort: 9000
          name: http
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 1
