deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php
  labels:
    app: php
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app: php
